[bumpversion]
current_version = 1.1.0
commit = True
tag = True

[bumpversion:file:setup.py]

[bumpversion:file:obs_img_utils/__init__.py]

[bumpversion:file:docs/source/conf.py]

[bumpversion:file:package/python3-obs-img-utils.spec]

[coverage:report]
fail_under = 90

[metadata]
license_file = LICENSE

[tool:pytest]
testpaths = tests
